real-time thong bao, reply comment blog func